Merged in feature/AI-163_Save_parent_pathing_with_QBO_categories (pull request #454)
AI-163 - Persist Expense Category 'Path' if generated from QBO

* initial commit

* converted to String[]

* sja


Approved-by: Slava Akimov